--- a/about.html
+++ b/about.html
@@ -3,6 +3,7 @@ layout: post
 title: About Me
 date: 2014-09-01 01:35:00
 cover: cover.jpg
+description: Molly Huerster
 ---
 
 <p>I'm a native New Yorker: I was born in Park Slope (before it was cool), grew up in Westchester (still hasn't gotten cool), and went to high school on the Upper East Side (which got a lot cooler when Gossip Girl came out).</p>
