add Mary to index meta

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: Home
-description: Molly Huerster
+description: Molly Huerster Mary Huerster
 ---
 
 {% assign page = site.posts.first %}
