write railsbridge post, update root meta

--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@ layout: static
 title: About Me
 date: 2014-11-01 23:32:00
 cover: cover.jpg
-description: Mary Huerster
+description: My name is Molly Huerster and I'm a software developer living in San Francisco. I mostly code in Ruby on Rails, with a little mobile stuff. When I'm not coding, I'm probably reading or cooking or exploring San Francisco. You might know me a Mary Huerster (especially if you've emailed me!).
 ---
 
 <h2>The Basics</h2>
