--- a/about.html
+++ b/about.html
@@ -29,5 +29,5 @@ description: My name is Molly Huerster and I'm a software developer living in Sa
 
 <p>I'm also a recent (2013) graduate of Washington and Lee University, where I majored in Classics and Politics, and studied abroad for a semester at the University of St Andrews.</p>
 
-<p>After graduation, I moved back to the New York area and worked in marketing for a year. I was working for a tech startup and loved the environment, but always felt that I wasn't quite in on the action because I didn't understand how the product was was made. I started learning to code, and knew almost immediately that I wanted to do it full time. A year later, that's exactly what I'm doing.</p>
+<p>After graduation, I moved back to the New York area and worked in marketing for a year. I was working for a tech startup and loved the environment, but always felt that I wasn't quite in on the action because I didn't understand how the product was made. I started learning to code, and knew almost immediately that I wanted to do it full time. A year later, that's exactly what I'm doing.</p>
 <p>Things are pretty good.</p>
