create html resume

--- a/resume.html
+++ b/resume.html
@@ -1,55 +1,120 @@
 ---
-layout: static
+layout: resume
 title: 
 date: 2015-01-11 22:20:00
 cover: cover.jpg
 description: My name is Molly Huerster and I'm a software developer living in San Francisco. I mostly code in Ruby on Rails, with a little mobile stuff. When I'm not coding, I'm probably reading or cooking or exploring San Francisco. You might know me a Mary Huerster (especially if you've emailed me!).
 ---
+<div class="resume">
+  <a href="/resume.pdf" target="_blank">View as PDF</a>
+  <div class="contact-header">
+    <h1>Molly Huerster</h1>
+    <h3>Full-Stack Web Developer</h3>
+    <h3>San Francisco, CA</h3>
+    <h3>(518) 527-5874</h3>
+    <a href="http://mhuerster.com/?utm_source=resume&utm_medium=PDF&utm_campaign=Resume">blog</a> - <a href="https://github.com/mhuerster">github</a> - <a href="mailto:molly@mhuerster.com?Subject=Hi%20Molly">email</a> - <a href="http://www.linkedin.com/in/maryhuerster/">linkedin</a>
+  </div>
+  <br>
+  <h3 class="section-header">Languages and Skills</h3>
 
-<div class="resume-header">
-  <h1>Molly Huerster</h1>
-  <h3>Full-Stack Web Developer</h3>
-  <h3>San Francisco, CA</h3>
-  <h3>(518) 527-5874</h3>
-  <a href="http://mhuerster.com/?utm_source=resume&utm_medium=PDF&utm_campaign=Resume">blog</a> - <a href="https://github.com/mhuerster">github</a> - <a href="mailto:molly@mhuerster.com?Subject=Hi%20Molly">email</a> - <a href="http://www.linkedin.com/in/maryhuerster/">linkedin</a>
+  <table>
+    <tr>
+      <th>Programming Languages</th>
+      <th>Frameworks and Libraries</th>
+      <th>Skills</th>
+    </tr>
+    <tr>
+      <td>Ruby</td>
+      <td>Rails</td>
+      <td>Agile Development</td>
+    </tr>
+    <tr>
+      <td>JavaScript</td>
+      <td>jQuery</td>
+      <td>TDD and BDD</td>
+    </tr>
+    <tr>
+      <td>HTML5</td>
+      <td>RSpec and Minitest</td>
+      <td>Object-Oriented Design</td>
+    </tr>
+    <tr>
+      <td>CSS3</td>
+      <td>Jasmine</td>
+      <td>RESTful Architecture</td>
+    </tr>
+    <tr>
+      <td>Objective-C</td>
+      <td>Capybara</td>
+      <td>MVC Pattern</td>
+    </tr>
+    <tr>
+      <td></td>
+      <td></td>
+      <td>AJAX</td>
+    </tr>
+  </table>
+
+  <h3 class="section-header">Experience</h3>
+
+  <h4>Hike Labs</h4>
+  <h5>San Francisco, CA</h5>
+  <h5>2014 - present</h5>
+  <ul>
+    <li>Maintain and develop REST API</li>
+    <li>Created a Google Chrome extension to create draft posts</li>
+  </ul>
+
+  <h4>TripsWare (Provider of web-based expense reporting software)</h4>
+  <h5>Thornwood, NY</h5>
+  <h5>2013-2014</h5>
+  <ul>
+    <li>Created and maintained system-wide user manual</li>
+    <li>Beta-tested new features for bugs and user experience</li>
+    <li>Provided support to system users</li>
+  </ul>
+
+  <h3 class="section-header">Projects</h3>
+
+  <h4>Fauxster (<a href="https://github.com/mhuerster/fauxster">source code</a>)</h4>
+  <a href="http://badge.fury.io/rb/fauxster"><img src="https://badge.fury.io/rb/fauxster.svg" alt="Gem Version" height="18"></a>
+  <ul>
+    <li>Wrapper gem for the HipsterIpsum API. Generates 1-100 paragrahs of hipster-themed filler text.</li>
+    <li>Over 250 downloads as of January 2015</li>
+    <li>Technologies: HTTP, REST architecture</li>
+  </ul>
+
+  <h4>BikePath (<a href="https://github.com/mhuerster/bike-path">source code</a>)</h4>
+  <ul>
+    <li>iOS app for public bikeshare users</li>
+    <li>Technologies: Objective-C, Kiwi, Google Maps API, Google Places API</li>
+    <li>Submission to App Store pending</li>
+  </ul>
+
+  <h3 class="section-header">Open Source Contributions</h3>
+
+  <h4>NewsDiffs (<a href="https://github.com/ecprice/newsdiffs/commit/94ba67103b4ac72739cbec5ce7c6f8c053d349a5">source code</a>)</h4>
+  <ul>
+    <li>Used HTML5 to make the <a href="http://newsdiffs.org/subscribe/">email subscription form</a> more mobile-responsive</li>
+  </ul>
+
+  <h3 class="section-header">Volunteering</h3>
+
+  <h4><a href="http://railsbridge.org/about">RailsBridge</a></h4>
+  <h5>2014 - present</h5>
+  <ul>
+    <li>TA at workshops teaching Rails to groups underrepresented in tech (primarily women)</li>
+  </ul>
+
+  <h3 class="section-header">Education</h3>
+
+  <h4><a href="http://wlu.edu/">Washington and Lee University</a></h4>
+  <h5>Lexington, VA</h5>
+  <h5>Class of 2013</h5>
+  <ul>
+    <li>Bachelor of Arts: Classics, Politics</li>
+    <li>GPA 3.554</li>
+    <li>Full tuition academic scholarship</li>
+  </ul>
+
 </div>
-<br>
-<h3>Languages and Skills</h3>
-
-<table class="resume-table">
-  <tr>
-    <th class="resume-table">Programming Languages</th>
-    <th class="resume-table">Frameworks and Libraries</th>
-    <th class="resume-table">Skills</th>
-  </tr>
-  <tr>
-    <td class="resume-table">Ruby</td>
-    <td class="resume-table">Rails</td>
-    <td class="resume-table">Agile Development</td>
-  </tr>
-  <tr>
-    <td class="resume-table">JavaScript</td>
-    <td class="resume-table">jQuery</td>
-    <td class="resume-table">TDD and BDD</td>
-  </tr>
-  <tr>
-    <td class="resume-table">HTML5</td>
-    <td class="resume-table">RSpec and Minitest</td>
-    <td class="resume-table">Object-Oriented Design</td>
-  </tr>
-  <tr>
-    <td class="resume-table">CSS3</td>
-    <td class="resume-table">Jasmine</td>
-    <td class="resume-table">RESTful Architecture</td>
-  </tr>
-  <tr>
-    <td class="resume-table">Objective-C</td>
-    <td class="resume-table">Capybara</td>
-    <td class="resume-table">MVC Pattern</td>
-  </tr>
-  <tr>
-    <td class="resume-table"></td>
-    <td class="resume-table"></td>
-    <td class="resume-table">AJAX</td>
-  </tr>
-</table>
