fix about page alignment issue

--- a/about.html
+++ b/about.html
@@ -3,16 +3,15 @@ layout: static
 title: About Me
 date: 2014-11-01 23:32:00
 cover: cover.jpg
-description: My name is Molly Huerster and I'm a software developer living in San Francisco. I mostly code in Ruby on Rails, with a little mobile stuff. When I'm not coding, I'm probably reading or cooking or exploring San Francisco. You might know me a Mary Huerster (especially if you've emailed me!).
+description: My name is Molly Huerster and I'm a software developer living in San Francisco. I mostly code in Ruby on Rails, with a little mobile stuff. When I'm not coding, I'm probably reading or cooking or exploring San Francisco. You might know me as Mary Huerster (especially if you've emailed me!).
 ---
 
 <h2>The Basics</h2>
 
 <ul>
-	<li>Full stack web developer</li>
+	<li>Software developer (mostly Rails)</li>
 	<li>San Francisco transplant</li>
-	<li><a href="http://www.politico.com/" target="blank">Politico</a> junkie</li>
-	<li>"Fluent" in dead languages</li>
+  <li>Classics enthusiast</li>
 </ul>
 
 <h2>Why I Code</h2>
