--- a/resume.html
+++ b/resume.html
@@ -59,10 +59,12 @@ description: My name is Molly Huerster and I'm a software developer living in Sa
 
   <h4>Hike Labs</h4>
   <h5>San Francisco, CA</h5>
-  <h5>2014 - present</h5>
+  <h5>October 2014 - March 2015</h5>
   <ul>
-    <li>Maintain and develop REST API</li>
-    <li>Created a Google Chrome extension to create draft posts</li>
+    <li>Maintained and developed REST API (Rails)</li>
+    <li>Added features to mobile front end (Objective-C)</li>
+    <li>Created a Google Chrome extension (JavaScript)</li>
+    <li>Worked with Twitter and Facebook API's</li>
   </ul>
 
   <h4>TripsWare (Provider of web-based expense reporting software)</h4>
@@ -80,7 +82,7 @@ description: My name is Molly Huerster and I'm a software developer living in Sa
   <a href="http://badge.fury.io/rb/fauxster"><img src="https://badge.fury.io/rb/fauxster.svg" alt="Gem Version" height="18"></a>
   <ul>
     <li>Wrapper gem for the HipsterIpsum API. Generates 1-100 paragrahs of hipster-themed filler text.</li>
-    <li>Over 250 downloads as of January 2015</li>
+    <li>Over 375 downloads as of March 2015</li>
     <li>Technologies: HTTP, REST architecture</li>
   </ul>
 
